2004-05-17  Adam Nemet  <anemet@lnxw.com> 

	* configure.in: Add ppc-*-lynxos*.  Update i386-*-lynxos* to ELF.
	* configure: Regenerate.

2004-05-13  Paul Brook  <paul@codesourcery.com>

	* dw2gencfi.c (output_cie):  Handle dwarf3 format CIE entries.

2004-05-13  Joel Sherrill <joel@oarcorp.com>

	* configure.in (or32-*-rtems*): Switch to elf.
	* configure: Regenerate.

2004-05-13  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.

2004-05-11  Nick Clifton  <nickc@redhat.com>

	* doc/as.texinfo (Section): Document G and T flags to .section
	directive.  Document the extra arguments that the G flag
	requires.  Document the #tls flag.

2004-05-11  H.J. Lu  <hongjiu.lu@intel.com>

	* subsegs.c (section_symbol): Create a new section symbol if
	the existing one doesn't match.
	* symbols.c (symbol_set_bfdsym): Don't reset BFD section symbol.

2004-05-07  Richard Sandiford  <rsandifo@redhat.com>

	* config/tc-mips.c (append_insn, mips_emit_delays): Extend -mfix-vr4120
	to cope with VR4181A errata MD(1) and MD(4).

2004-05-07  Brian Ford  <ford@vss.fsi.com>

	* NEWS: Mention .secrel32 for pe[i]-i386.

2004-05-07  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-frv.h (MAX_MEM_FOR_RS_ALIGN_CODE): New.
	(HANDLE_ALIGN): New.

2004-05-06  Daniel Jacobowitz  <dan@debian.org>

	* Makefile.am (DIST_SUBDIRS): Define.
	* aclocal.m4: Regenerate with automake 1.8.4.
	* Makefile.in: Likewise.
	* doc/Makefile.in: Likewise.

2004-05-06  David Mosberger-Tang  <davidm@hpl.hp.com>

	* config/tc-ia64.c (dot_serialize): Declare.
	(dot_serialize): New function.
	(md_pseudo_table): Add ".serialize.data" and
	".serialize.instruction" directives.

2004-05-06  Nick Clifton  <nickc@redhat.com>

	* messages (as_internal_value_out_of_range): Print a message about
	a value being out of range.  Be consistent about whether the
	values are printed in decimal or hexadecimal.
	(as_warn_value_out_of_range): Generate a warning message about an
	out of range value.