@@ -1,3 +1,8 @@
+2004-05-20  Richard Sandiford  <rsandifo@redhat.com>
+
+	* config/tc-mips.c (append_insn): Use ISA-encoded addresses in MIPS16
+	dwarf tables.
+
 2004-05-17  Adam Nemet  <anemet@lnxw.com> 
 
 	* configure.in: Add ppc-*-lynxos*.  Update i386-*-lynxos* to ELF.
